# pyppl_strict

./: .pre-commit-config.yaml  .tagitrc  README.md  pyppl_strict.py  pyproject.toml  setup.py  tox.ini
tests/: test_strict.py
