[tool.poetry]
name = "pyppl_strict"
version = "0.0.2"
description = "More strict check of job success for PyPPL"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pyppl]
pyppl_strict = "pyppl_strict"
